--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,54 @@
 /* ESTILO DE BODY */
 body {
   margin: 0;
-  
+  padding: 0;
+  background-color: rgb(98, 98, 202) !important;
+}
+
+.todo_container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
+  height: 100vh;
+  background-color: #110b18 !important;
+  border-right: 3px solid #b1afaf;
+}
+.titulo {
+  text-align: center;
+  color: #000;
+  margin-bottom: 15px;
+  font-weight: bold;
+  border-bottom: 0.9px solid #0303;
+}
+
+.input_container {
+  width: 50%;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+  height: auto;
+  background-color: #b1afaf;
+  border-top: 5px solid rgb(98, 98, 202);
+}
+
+input {
+  padding: 0.3em;
+}
+
+.btn-primary {
+  padding: 0.3em;
+}
+
+#taskList {
+  width: 50%;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+  height: auto;
+  background-color: #b1afaf;
+  border-top: 2px solid rgb(98, 98, 202);
+  margin-top: 0;
 }
